# next_step_ai

./: .gitignore  405B_SWITCH_READINESS_REPORT.md  AGENTS.md  CURRENT_MODEL_FILE_USAGE_REPORT.md  DEFINITIVE_STRICT_OUTPUT_ROOT_CAUSE_REPORT.md  GROUPED_GEMM_CUSTOM_KERNEL_PLAN.md  HONEST_SPARSE_WORKLOG.md  README.md  SCA_BACKEND_SWITCH_NOTE.md  SCA_RECALIBRATION_EXECUTION_REPORT.md  SCA_ROOT_CAUSE_DIAGNOSIS_REPORT.md  STRICT_SHORT_PROMPT_STABILITY_ANALYSIS.md  THREE_TIER_SPARSE_ATTENTION_IMPLEMENTATION_REPORT.md  TRITON_SCA_GATE_MIGRATION_REPORT.md  accelerate_config.yaml  benchmark_comparison_analysis.py  benchmark_config.yaml  debug_log.txt  diagnose_actual_mlp.py  diagnose_late_mlp.py  diagnose_logits_precision.py  diagnose_prefill_vs_sequential.py  diagnose_streamed_attention_weights.py  extract_bio_metrics.py  fit_basis_from_resume.py  fix_all.py  generate_current_model_file_usage_report.py  implementationplan.md  main.py  majestic-painting-hinton.md  newtests.md  plan.md  profile_decode.py  profile_decode_gpu.py  pyproject.toml  pytest.ini  requirements.txt  research_paper2.tex  run_semantic_sparse_pipeline.ps1  sca_grid_size_notes.md  (+8 more)
.claude/: settings.local.json
.codex/: AGENTS.md
adaptive_components/: custom_activation.py
example_configs/: llama_sca_objective_adaptive.yaml  llama_sca_objective_bench_cuda.yaml  llama_sca_objective_bench_dense.yaml  llama_sca_objective_dense_poc_tune.yaml  llama_sca_objective_grouped_gemm.yaml  llama_sca_posthoc_ablation.yaml  performance_test_config.yaml
legacy/: README.md  bounded_context.py  neuroplastic_llama_gqa_mamba.py  paged_sparse_attention.py  sca_decoder_mirror.py  sca_sparse_adapter.py  sca_sparse_config.py  sca_sparse_kv.py  sca_sparse_mlp.py  triton_sca_gate.py
llama3_neuroplastic/: basis_fitting.py  bench_grouped_micro.py  bench_grouped_row_gemm.py  bounded_context.py  check_grouped_correctness.py  generate_qualitative.py  generated_sample.txt  gqa_mamba_rank_collapse.py  gqa_taylor_ssd.py  init_learned_basis_from_dense_mlp.py  layer_selection.py  llama_evaluation_pipeline.py  neuroplastic_llama_backup_pre_mamba.py  neuroplastic_llama_gqa_mamba.py  neuroplastic_llama_interpolated_sca_v2.py  objective_losses.py  objective_scheduler.py  paged_sparse_attention.py  performance_utils.py  profile_triton_sparse.py  run_both_minimal.py  run_decoder_mirror_sca_calibration.py  run_gqa_mamba_rank_collapse_pipeline.py  run_gqa_mamba_sync_calibration.py  run_hybrid_gqa_mamba_inference.py  run_llama_benchmark_1000.py  run_llama_benchmark_1000_added_buffer_interpolateinject.py  run_sca_diagnostic_wipe.py  run_sca_fast_depth_probe.py  run_sca_flops_grid_ablation.py  run_sca_layer_decode_profile.py  run_sca_optimization_smoke.py  run_sca_posthoc_ablation.py  run_sca_recalibration_from_hybrid_baseline.py  run_sca_root_issue_locator.py  run_sca_topk_ablation.py  (+18 more)
(+232 files in other folders)
