[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "next-step-ai"
version = "0.1.0"
description = "Neuroplastic Llama 3.1 405B inference runtime on 8 GB VRAM via layer-streaming and learned-basis MLP sparsity"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "bitsandbytes>=0.43",
    "safetensors>=0.4",
    "huggingface-hub>=0.22",
    "scikit-learn>=1.3",
    "datasets>=2.18",
    "numpy>=1.24",
    "accelerate>=0.28",
]

[project.optional-dependencies]
triton = [
    # Windows: triton-windows; Linux: triton (bundled with torch)
    "triton-windows>=3.0; sys_platform == 'win32'",
]
eval = [
    "evaluate>=0.4",
]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
stream-llama = "llama3_neuroplastic.experiments.run_streaming_inference:main"
fit-basis    = "llama3_neuroplastic.experiments.init_learned_basis_from_dense_mlp:main"
eval-ppl     = "llama3_neuroplastic.experiments.eval_perplexity:main"
benchmark    = "llama3_neuroplastic.experiments.benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llama3_neuroplastic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
